--- a/DOM-2/index.html
+++ b/DOM-2/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <p>
-  Lorem ipsum dolor sit amet, <a href="https://bes-webdeveloper-seraing.be">consectetur</a> adipiscing elit. Nullam non leo at dolor vestibulum <a href="#">pellentesque</a>.
+  Lorem ipsum dolor sit amet, <a id="link1" href="https://bes-webdeveloper-seraing.be">consectetur</a> adipiscing elit. Nullam non leo at dolor vestibulum <a href="#">pellentesque</a>.
   Duis sit amet placerat lacus, eu volutpat quam. Sed auctor est ac tellus condimentum, quis viverra augue vulputate.
   Curabitur facilisis fringilla <a href="#">libero</a> eget pretium. Vivamus et feugiat velit. Sed nisl ante, eleifend commodo consectetur et, iaculis eu lorem.
   Proin vel eros a odio faucibus varius. Aliquam nunc erat, volutpat id mauris non, posuere posuere purus.
