--- a/canvas/index.html
+++ b/canvas/index.html
@@ -11,6 +11,6 @@
 <body>
 <div id="container"></div>
 
-<script src="canvas.js"></script>
+<script src="canvas-request-animationFrame.js"></script>
 </body>
 </html>
